--- a/app/index.html
+++ b/app/index.html
@@ -11,30 +11,16 @@
     </head>
     <body>
 
-        <header class="header-main">
-            <div class="wrapper">
-                <a href="index.html" class="logo">company</a>
-                <nav class="nav-main">
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Work</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-
         <div class="wrapper">
-            <h2>Headline</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, dolor cupiditate tenetur. Ea similique id veniam saepe a provident necessitatibus dolorem voluptatibus eum, facilis neque eveniet sed perspiciatis. Magni, sit.</p>
-        </div>
-
-        <footer class="footer-main">
-            <div class="wrapper">
-                &copy; 2015
+            <div class="row">
+                <div class="col-6">
+                    <h2>col-6</h2>
+                </div>
+                <div class="col-6">
+                    <h2>col-6</h2>
+                </div>
             </div>
-        </footer>
+        </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
