added susy container and debug options

--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,13 @@
     </head>
     <body>
 
-        <div class="wrapper">
+        <div class="container">
             <div class="row">
                 <div class="col-6">
-                    <h2>col-6</h2>
+                    1
                 </div>
                 <div class="col-6">
-                    <h2>col-6</h2>
+                    2
                 </div>
             </div>
         </div>
