--- a/app/index.html
+++ b/app/index.html
@@ -1,37 +1,83 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Website Title</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Website Title</title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="styles/styles.css">
-    </head>
-    <body>
+		<link rel="stylesheet" href="styles/styles.css">
+	</head>
+	<body>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    1
-                </div>
-                <div class="col-6">
-                    2
-                </div>
-            </div>
-        </div>
+		<header class="header-main">
+			<div class="container">
+				<img src="images/logo.png" alt="WinLocal">
+				<div class="right">
+					<a href="tel:0800440110844" class="tel">0800 44 01 10 844</a>
+					<nav class="nav-main">
+						<ul>
+							<li>
+								<a href="system.html">Das WinLocal System</a>
+							</li>
+							<li>
+								<a href="referenzen.html">Referenzen</a>
+							</li>
+							<li>
+								<a href="kontakt.html">Kontaktieren</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-        
-        <script src="scripts/app.js"></script>
-    </body>
+		<div class="emotion">
+			<div class="container">
+				<div class="text">
+					<h2>IHR BUSINESS: ONLINE UNÜBERSEHBAR!</h2>
+					<br>
+					<h2>Umsatz ist eine Frage der Sichtbarkeit</h2>
+					<br>
+					<h3>Smarte Lösungen für Franchise-Systeme</h3>
+				</div>
+			</div>
+			<div class="pic">
+				<img src="images/header.jpg" alt="Header">
+			</div>
+		</div>
+
+		<section class="intro">
+			<div class="container">
+				<h2>WINLOCAL – IN 2 MINUTEN ERKLÄRT</h2>
+				<iframe width="800" height="450" src="https://www.youtube.com/embed/P25v--BKEXQ" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</section>
+
+		<footer class="footer-main">
+			<div class="top">
+				<div class="container">
+					<img src="images/logo-footer.png" alt="WinLocal">
+				</div>
+			</div>
+			<div class="bottom">
+				<div class="container">
+					<nav class="nav-footer">
+						<ul>
+							<li>
+								<a href="datenschutz.html">Datenschutzrichtlinien</a>
+							</li>
+							<li>
+								<a href="impressum.html">Impressum</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</footer>
+		
+		
+		<script src="scripts/app.js"></script>
+	</body>
 </html>
