--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,16 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 	<body>
 
 		<header class="header-main">
 			<div class="container">
-				<img src="images/logo.png" alt="WinLocal">
+				<a href="index.html" class="logo">
+					<img src="images/logo.png" alt="WinLocal">
+				</a>
 				<div class="right">
 					<a href="tel:0800440110844" class="tel">0800 44 01 10 844</a>
 					<nav class="nav-main">
@@ -36,11 +39,11 @@
 		<div class="emotion">
 			<div class="container">
 				<div class="text">
-					<h2>IHR BUSINESS: ONLINE UNÜBERSEHBAR!</h2>
+					<h2>Wir machen Ihr Franchise System</h2>
 					<br>
-					<h2>Umsatz ist eine Frage der Sichtbarkeit</h2>
+					<h2>online unübersehbar!</h2>
 					<br>
-					<h3>Smarte Lösungen für Franchise-Systeme</h3>
+					<h3>Für messbar mehr Umsatz vor Ort.</h3>
 				</div>
 			</div>
 			<div class="pic">
@@ -51,7 +54,110 @@
 		<section class="intro">
 			<div class="container">
 				<h2>WINLOCAL – IN 2 MINUTEN ERKLÄRT</h2>
-				<iframe width="800" height="450" src="https://www.youtube.com/embed/P25v--BKEXQ" frameborder="0" allowfullscreen></iframe>
+				<iframe width="920" height="478" src="https://www.youtube.com/embed/VmXy1sTXLuY" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</section>
+
+		<section class="animated">
+			<div class="container">
+				<div class="box top-left">
+					<h3>EMPFOHLEN, GEFUNDEN, MESSBAR MEHR UMSATZ</h3>
+					<p>Eine Kaufentscheidung braucht Vertrauen. Deswegen sind Erfahrungsberichte anderer Kunden für Neukunden so wichtig.  Mit ihren Kundenempfehlungen geben wir jedem Partner Ihres Netzwerks ein Profil, auf das Neukunden sich verlassen. Unübersehbar – auf unserem Portal KennstDuEinen.de &amp; unter den ersten Suchergebnissen bei Google. Werden Sie zum empfohlenen Profi Ihrer Region!</p>
+					<a href="empfehlungsexperte.html">Jetzt zum EmpfehlungsEXPERTE</a>
+				</div>
+				<div class="box top-right border">
+					<h3>RÜCKEN SIE NACH VORNE, IM SCHAUFENSTER DER WELT! </h3>
+					<p>Mit Google AdWords-Anzeigen führen wir die für Ihre Standorte passendsten Neukunden direkt zu ihrem Angebot. Optimiert nach Zielgruppe &amp; Einzugsgebiet.  Sie haben Empfehlungen zufriedener Kunden, die wir dort sichtbar machen können? Wunderbar, dann führt kein Weg an Ihnen vorbei! </p>
+					<a href="adwordsexperte.html">Jetzt zum AdWordsEXPERTE</a>
+				</div>
+				<div class="box bottom-left border">
+					<h3>ONLINE SICHTBAR - OFFLINE ERREICHBAR</h3>
+					<p>Jeder Ihrer Standorte ist mit WinLocal sofort auffindbar – egal, auf welchem Endgerät &amp; welcher Plattform Kunden nach Lösungen oder Produkten suchen. Unser Maps&amp;NaviExperte sorgt dafür, dass Kunden auch offline den Weg zu Ihnen finden. Leicht &amp; schnell.</p>
+					<a href="naviexperte.html">Jetzt zum Maps&amp;NaviEXPERTE</a>
+				</div>
+				<div class="box bottom-right">
+					<h3>Unübersehbar auf Facebook</h3>
+					<p>Facebook ist der beste Weg, um online neue relevante Zielgruppen zu aktivieren und Nutzer von Ihrer Marke und Ihrem Angebot zu überzeugen. WinLocal bringt messbar mehr Neukunden aus dem größtem sozialen Netzwerk der Welt an Ihre Standorte.</p>
+					<a href="facebookexperte.html">Jetzt zum FacebookEXPERTE</a>
+				</div>
+			</div>
+		</section>
+
+		<section class="teaser-bottom">
+			<div class="container">
+				<div class="box">
+					<h3>Ganzheitliche lokale Online Marketing Lösungen, individuell auf Ihr Franchise System zugeschnitten.</h3>
+				</div>
+			</div>
+		</section>
+
+		<section class="orange">
+			<div class="container">
+				<p>WinLocal gibt Ihnen als Franchisegeber einen One Stop Shop für Online Marketing. Wir bieten die optimale Verzahnung der Kanäle &amp; Maßnahmen.</p>
+				<br>
+				<img src="images/product-icons.png" alt="WinLocal Produkte" class="img-r">
+				<br>
+				<br>
+				<p>WinLocal gibt Lösungen: Ihr Unternehmen hat individuelle Ziele, die nur mit Hilfe maßgeschneiderter Maßnahmen erreicht werden. Gemeinsam mit Ihnen erarbeiten wir Schritte, mit denen Sie Ihre Zielvorgaben erreichen</p>
+			</div>
+		</section>
+
+		<section class="customers">
+			<div class="container">
+				<h3 class="center">
+					Lesen Sie was unsere Kunden über uns sagen:
+				</h3>
+				<div class="img-container">
+					<div class="img-wrapper">
+						<img src="images/expert.png" alt="Expert">
+					</div>
+					<div class="img-wrapper">
+						<img src="images/cleverfit.png" alt="CleverFit">
+					</div>
+					<div class="img-wrapper">
+						<img src="images/lohi.png" alt="Lohi">
+					</div>
+					<div class="img-wrapper">
+						<img src="images/weru.png" alt="Weru">
+					</div>
+					<div class="img-wrapper">
+						<img src="images/heorex.png" alt="Hoerex">
+					</div>
+					<div class="img-wrapper">
+						<img src="images/studienkreis.png" alt="Studienkreis">
+					</div>
+					<div class="img-wrapper">
+						<img src="images/topateam.png" alt="TopaTeam">
+					</div>
+					<div class="img-wrapper">
+						<img src="images/points.png" alt="PointS">
+					</div>
+				</div>
+				<p class="center">Mehr als 5.000 Unternehmen aus über 100 Branchen vertrauen den Lösungen von WinLocal.</p>
+			</div>
+		</section>
+
+		<section class="cite orange">
+			<div class="container">
+				<cite>„Jedes Unternehmen ist einzigartig. Deswegen möchten wir Ihnen gern persönlich demonstrieren, mit welchen Lösungen wir Ihre Marke online unübersehbar erfolgreich machen können.“</cite>
+				<div class="wrapper">
+					<div class="left">
+						<img src="images/rene.png" alt="Rene Strauß" class="circle">
+						<br>
+						<div class="center">
+							<b>René Strauß</b>
+							<br>
+							Vertriebsleiter
+							<br>
+							Franchise-Systeme
+						</div>
+					</div>
+					<div class="right">
+						<h3>Rufen Sie uns an:</h3>
+    					<a href="tel:0800440110844">0800 44 01 10 844</a>
+    					<p>Oder wählen Sie jetzt einen Demo-Termin für eine Teamviewer Präsentation.</p>
+					</div>
+				</div>
 			</div>
 		</section>
 
