--- a/app/subpage.html
+++ b/app/subpage.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Homepage</title>
+		<title>Subpage</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link rel="stylesheet" href="styles/styles.css">
 	</head>
-	<body class="homepage">
+	<body>
 
 		<header class="header-main">
 			<div class="container">
@@ -27,7 +27,7 @@
 					<nav class="nav-main">
 						<ul>
 							<li>
-								<a href="empfehlungsexperte.html">Das WinLocal System</a>
+								<a href="system.html">Das WinLocal System</a>
 							</li>
 							<li>
 								<a href="referenzen.html">Referenzen</a>
@@ -43,15 +43,13 @@
 
 		<div class="emotion">
 			<div class="pic">
-				<img src="images/header.jpg" alt="Header">
+				<img src="images/header-ee.jpg" alt="Header">
 			</div>
 			<div class="container">
 				<div class="text">
-					<h2>Wir machen Ihr Franchise System</h2>
+					<h2>EmpfehlungsEXPERTE </h2>
 					<br>
-					<h2>online unübersehbar!</h2>
-					<br>
-					<h3>Für messbar mehr Umsatz vor Ort.</h3>
+					<h3>Nichts ist wertvoller als die Empfehlungen Ihrer zufriedenen Kunden!</h3>
 				</div>
 			</div>
 		</div>
